Small correction for issue with horizontal scrollbar due to secondary item - Changed margin for secondary-items causing scroll issues

--- a/src/views/component/Navigation/main-navigation/style.less
+++ b/src/views/component/Navigation/main-navigation/style.less
@@ -32,7 +32,7 @@ body.navigation-open {
     }
 
     .navbar-nav.navbar-right:last-child {
-      margin-right: 0;
+      margin-right: 1px;
       -webkit-transition: margin-right 100ms ease;
       -moz-transition: margin-right 100ms ease;
       -o-transition: margin-right 100ms ease;
